<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="12dp" android:background="@drawable/single_task_preview_background"><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/single_task_preview_title" android:textSize="18sp" android:textColor="#EDEDF0" android:maxLines="2" /><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/single_task_preview_meta" android:textSize="12sp" android:textColor="#98989F" android:maxLines="2" /><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/single_task_preview_first" android:textSize="14sp" android:textColor="#EDEDF0" android:maxLines="2" /><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/single_task_preview_done" android:textSize="14sp" android:textColor="#98989F" android:maxLines="2" /><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/single_task_children" android:textSize="12sp" android:textColor="#98989F" android:maxLines="2" /><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/single_task_preview_child" android:textSize="14sp" android:textColor="#8199FF" android:maxLines="2" /></LinearLayout>